--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+
+    <color name="colorPrimary">#13A795</color>
+    <color name="colorSecondary">#13A795</color>
+    <color name="colorHomeToolbar">#F7FAEA</color>
+    <color name="colorButton">#F6FFDC</color>
+    <color name="colorButtonBorder">#115A45</color>
+    <color name="colorOnSecondaryContainer">#0060EF</color>
+    <color name="colorAccent">#EF5744</color>
+    <color name="colorSecondaryButton">#F24C4C</color>
+    <color name="colorFilled">#E2E2E2</color>
+    <color name="newaccentColor">#074749</color>
+    <color name="newaccentColor2">#a1d8d9</color>
+    <color name="transnewaccentColor">#13A795</color>
+    <color name="colorBackground">#f5f5f5</color>
+    <color name="colorToolbarSelect">#80EFF2FA</color>
+    <color name="line_view">#dfdfdf</color>
+    <color name="colorForm">#1A2C50CB</color>
+    <color name="colorToolbar">#FFFFFF</color>
+    <color name="colorStatusBar">#000000</color>
+    <color name="colorSecondaryContainer">#FFFFFF</color>
+    <color name="colorTransparentRed">#40EB3838</color>
+    <color name="colorSurface">#FFFFFF</color>
+    <color name="colorPrivacy">#1947BA</color>
+    <color name="colorSecondary2Button">#E9F4FF</color>
+    <color name="colorActive">#11860E</color>
+    <color name="colorReceived">#21A453</color>
+    <color name="colorReceivedTransparent">#4D21A453</color>
+    <color name="colorRejectTransparent">#4DEF5744</color>
+    <color name="textColorHint">#546E7A</color>
+    <color name="colorTextSecondary">#979797B2</color>
+    <color name="colorShadow">#4B7B7B7B</color>
+    <color name="colorOrange">#FDAB3E</color>
+    <color name="colorNotSelectMenu">#79747E</color>
+    <color name="black">#000000</color>
+    <color name="blackTransparent">#80000000</color>
+    <color name="blackTransparent80Percent">#CC000000</color>
+    <color name="blackTransparent20Percent">#33000000</color>
+    <color name="blackTransparent30Percent">#4D000000</color>
+    <color name="blackTransparent10Percent">#1A000000</color>
+    <color name="blackTransparent5Percent">#0D000000</color>
+    <color name="whiteTransparent">#99FFFFFF</color>
+    <color name="whiteTransparent90">#E6FFFFFF</color>
+    <color name="shadow">#33000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorCardWallet">#136FA7</color>
+    <color name="colorProductBg">#F4F4F4</color>
+    <color name="colorRateBar">#FFCC4A</color>
+    <color name="colorButtonYellow">#FFC100</color>
+    <color name="colorRed">#EB3838</color>
+    <color name="colorPaper">#4DF9A63D</color>
+    <color name="colorSuccess">#0EC2B5</color>
+    <color name="colorLineHome">#D9D9D9</color>
+    <color name="backgroundChat">#E6E5FF</color>
+    <color name="colorBgKTA">#bed75c</color>
+    <color name="coloricon">#074749</color>
+    <color name="colorBgQuran">#Faf8ec</color>
+    <color name="newbackground">#FAFAFA</color>
+    <color name="newtext_secondary">#636363</color>
 </resources>
