--- a/app/src/main/res/layout/fragment_setting_article.xml
+++ b/app/src/main/res/layout/fragment_setting_article.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".SettingArticleFragment">
+    tools:context=".view.SettingArticleFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/actionBarLayout"
