--- a/app/src/main/res/navigation/navigation_add_news.xml
+++ b/app/src/main/res/navigation/navigation_add_news.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/addArticleFragment"
-        android:name="id.deeromptech.addnewsdata.AddArticleFragment"
+        android:name="id.deeromptech.addnewsdata.view.AddArticleFragment"
         android:label="fragment_add_article"
         tools:layout="@layout/fragment_add_article" >
         <argument
@@ -16,13 +16,13 @@
             android:defaultValue="false" />
         <argument
             android:name="news"
-            app:argType="id.deeromptech.addnewsdata.News"
+            app:argType="id.deeromptech.addnewsdata.model.News"
             app:nullable="true"
             android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/settingArticleFragment"
-        android:name="id.deeromptech.addnewsdata.SettingArticleFragment"
+        android:name="id.deeromptech.addnewsdata.view.SettingArticleFragment"
         android:label="fragment_setting_article"
         tools:layout="@layout/fragment_setting_article" >
         <action
